# Game_of_Life_DT

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  cell.c  cell.h  gameplace.c  gameplace.h  main  main.c  readme.md  unit_testing.c
.github/workflows/: ci.yml  main.yml
Docs/html/: annotated.html  cell_8c.html  cell_8c__incl.dot  cell_8c__incl.md5  cell_8h.html  cell_8h__dep__incl.dot  cell_8h__dep__incl.md5  cell_8h__incl.dot  cell_8h__incl.md5  cell_8h_source.html  circular_8c.html  circular_8c__incl.dot  circular_8c__incl.md5  circular_8h.html  circular_8h__dep__incl.dot  circular_8h__dep__incl.md5  circular_8h__incl.dot  circular_8h__incl.md5  circular_8h_source.html  classes.html  clipped_8c.html  clipped_8c__incl.dot  clipped_8c__incl.md5  clipped_8h.html  clipped_8h__dep__incl.dot  clipped_8h__dep__incl.md5  clipped_8h__incl.dot  clipped_8h__incl.md5  clipped_8h_source.html  console_8c.html  console_8c__incl.dot  console_8c__incl.md5  console_8h.html  console_8h__dep__incl.dot  console_8h__dep__incl.md5  console_8h__incl.dot  console_8h__incl.md5  console_8h_source.html  dir_000000_000003.html  dir_000001_000003.html  (+57 more)
Docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_1.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js
circular/: CMakeLists.txt  circular.c  circular.h
clipped/: CMakeLists.txt  clipped.c  clipped.h
console/: CMakeLists.txt  console.c  console.h
game/: CMakeLists.txt  cell.c  cell.h  gameplace.c  gameplace.h
sdl2/: CMakeLists.txt  sdl2.c  sdl2.h
